# VF-747-Python-SDK

./: ReaderAPI.py  main.py  packet.py  setup.cfg
src/VF747Reader/: ReaderAPI.py
