[metadata]
name=VF747-Reader
version=0.0.1
authoer=Tobias Bungard
author_email=tobi-bungard@t-online.de
description=Python implementation of the ReaderAPI for the VF747 Reader
long_descritption=file:README.md
long_descritption_content_type=text/markdown
url=https://github.com/Toboxos/VF-747-Python-SDK

[options]
package_dir=
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src